--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,178 +1,190 @@
-body{
-    background-color:#F5F3F0;
-    font-family: 'Nunito', sans-serif;
+/* CONFIGS*/
+:root {
+    ---font-nunito:'Nunito', sans-serif;
+    ---Background-principal: #E5E5E5;
+    ---Background-secundário: #F5F3F0;
+    ---Branco: #FFFFFF;
+    ---Marrom: #502314;
+    ---Vermelho: #DB3B1D;
+    ---Laranja: #FF8627;
+    ---Cinza-escuro: #2D2D2D;
+    ---Preto: #000000;
+    ---Borda-do-card: #F5EBDC;
 }
 
-.container{
+body {
+    background-color: var(---Background-principal);
+    font-family: var(---font-nunito);
+}
+
+.container {
     max-width: 1330px;
     margin: 0 auto;
-    padding:30px;
+    padding: 30px;
 }
 
 /* APLICANDO ESTILO NO CABEÇALHO */
-.cabecalho .container{
+.cabecalho .container {
+    max-width: 1330px;
     display: flex;
     justify-content: space-between;
 }
 
 /* APLICANDO ESTILO NA IMAGEM DO BANNER */
-.banner img{
+.banner img {
     width: 100%;
 }
 
 /* APLICANDO ESTILO NA SEÇÃO DE PRODUTOS */
-.secaoProdutos{
-    padding-top: 74px;
+.produtos {
+    padding-top: 30px;
 }
-.secaoProdutos .produtosLista{
+
+.lista__produtos {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 15px;
 }
-.secaoProdutos .cardProduto{
-    background-color: #fff;
-    width: 233px;
+
+.card__produto {
+    background-color: var(---Branco);
+    width: 230px;
     text-align: center;
-    padding: 22px 28px;
-    border: 2px solid #F5EBDC;
+    padding: 22px 25px;
+    border: 2px solid var(---Borda-do-card);
     border-radius: 15px;
+}
+
+.card__produto img {}
+
+.card__produto h3 {
+    color: var(---Marrom);
+    font-size: 1.2em;
+    font-weight: 700;
+    margin: 20px 0;
+    min-height: 40px;
+}
+
+.card__produto P {
+    font-size: 0.9em;
+    font-weight: 700;
+    margin: 20px 0;
+}
+
+.card__produto button {
+    font-family: var(---font-nunito);
+    background-color: var(---Background-secundário);
+    border: none;
+    border-radius: 8px;
+    width: 70%;
+    padding: 10px 0;
+    color: var(---Cinza-escuro);
+    font-weight: 500;
+    font-size: 0.8em;
+    cursor: pointer;
+}
+/* RODAPÉ */
+.rodape {}
+
+.carrinho {
+    background-color: var(---Branco);
+}
+
+.resumo {
+    background-color: var(---Marrom);
+    border-radius: 32px 32px 0 0;
+}
+
+.carrinho .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.detalhes__pedido h4 {
+    font-weight: 500;
+    font-size: 1.5em;
+    color: var(---Background-secundário);
     margin-bottom: 15px;
 }
-.secaoProdutos .cardProduto img{}
-.secaoProdutos .cardProduto h3{
-    color: #502314;
-    font-size:20px;
-    font-weight: 700;
-    margin:28px auto;
-    min-height: 40px;
-    max-width: 160px;
-}
-.secaoProdutos .cardProduto p{
-    color: black;
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 28px;
-}
-.secaoProdutos .cardProduto button{
-    background: #F5F3F0;
-    border:none;
-    border-radius: 8px;
-    width: 177px;
-    height: 41px;
-    color: #2D2D2D;
-    font-weight: 500;
-    font-size: 18px;
-    cursor: pointer;
-    font-family: 'Nunito', sans-serif;
-}
 
-/* RODAPÉ */
-.carrinho .infoResumo{
-    background: #502314;
-    border-radius: 32px 32px 0px 0px;
-    padding: 23px 0;
-}
-.carrinho .container{
-    display: flex;
-    justify-content: space-between;
-}
-.carrinho {
-    background-color: #fff;
-}
-.carrinho .infoUsuario h3{
-    font-weight: 500;
-    font-size: 32px;
-    color: #F7F5F0;
-    margin-bottom: 18px;
-}
-.carrinho .infoUsuario p{
-    font-style: italic;
+.detalhes__pedido p {
+    color: #bfbfba;
     font-weight: 200;
-    font-size: 22px;
-    line-height: 30px;
-    color: #F7F5F0;
-}
-.carrinho .infoResumo .infoPreco{
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 44px;
-    color: #F7F5F0;
+    font-size: 0.9em;
 }
 
-.carrinho .resumoPedido{
+.resumo .price p {
+    font-size: 1.3em;
+    color: var(---Background-secundário);
+    font-weight: 300;
+}
+
+.resumo__pedido {
     width: 80%;
 }
-.carrinho .resumoPedido .listaProdutos{}
-.carrinho .resumoPedido .cardProduto{
-    background: #F5F3F0;
-    border-radius: 15px;
+
+.lista__pedido {}
+
+.pedido__item {
+    background-color: var(---Background-secundário);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 30px;
 }
 
-.carrinho .resumoPedido .cardProduto .infoNome{
+.box__infor {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
-.carrinho .resumoPedido .cardProduto .infoNome img{
-    width: 150px;
+.box__infor img {
+    width: 130px;
+    margin-right: 20px;
 }
-.carrinho .resumoPedido .cardProduto .infoNome p{
+.box__infor p {
+    color: var(---Marrom);
     font-weight: 700;
-    font-size: 22px;
-    color: #502314;
-    margin-left: 30px;
+    font-size: 1.2em;
 }
 
-.carrinho .resumoPedido .cardProduto .infoPreco{
+.infor__price {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
-.carrinho .resumoPedido .cardProduto .infoPreco p{
-    font-style: italic;
+
+.infor__price p {
     font-weight: 200;
-    font-size: 24px;
-    color: #2D2D2D;
-}
-.carrinho .resumoPedido .cardProduto .infoPreco img{
-    width: 14px;
-}
-.carrinho .resumoPedido .cardProduto .infoPreco button{
-    background: #E6E6E6;
-    border-radius: 4px;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60px;
-    height: 51px;
-    margin-left: 43px;
-    cursor: pointer;
+    font-size: 0.9em;
+    margin-right: 20px;
 }
 
-.btnFinalizaPedido{
+.infor__price button {
+    background-color: #E6E6E6;
+    border: none;
+    border-radius: 4px;
+    width: 60px;
+    height: 50px;
+}
+
+.btn__pedidos {
     width: 20%;
-}
-.btnFinalizaPedido button{
-    width: 219px;
-    height: 51px;
-    background: #DB3B1D;
-    border: 4px solid #DB3B1D;
-    border-radius: 10px;
     text-align: center;
-    font-weight: 400;
-    font-size: 22px;
-    color: #FFFFFF;
-    cursor: pointer;
-    margin-bottom: 18px;
 }
-.btnFinalizaPedido button ~ button{
-    background: #fff;
-    border: 4px solid #DB3B1D;
-    color:#DB3B1D;
+
+.btn__pedidos button {
+    font-family: var(---font-nunito);
+    background-color: var(---Vermelho);
+    border: none;
+    color: var(---Background-secundário);
+    padding: 10px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.btn__pedidos button ~ button {
+    background-color: var(---Branco);
+    color: var(---Vermelho);
+    border: 2px solid var(---Vermelho);
 }
 
